--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 Add turn player market to html
-Add css for gameboard grid
 Add function to record player name and wins/loss
 Add function to show and mark turn player
 Add function to check winner
+Put padding on play menu so grid never goes past screen
