--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
-Add turn player market to html
+Add turn player market to html - complete
+Actually make the game (turn player is not switching)
 Add function to record player name and wins/loss
 Add function to show and mark turn player
 Add function to check winner
